@@ -9,6 +9,9 @@ import org.andor.gui.GUIComponent;
 import org.andor.gui.GUIComponentListener;
 import org.andor.gui.GUIDropDownList;
 import org.andor.gui.GUIDropDownMenu;
+import org.andor.gui.GUIGroup;
+import org.andor.gui.GUILabel;
+import org.andor.gui.GUIRadioCheckBox;
 import org.andor.utils.Console;
 import org.andor.utils.OpenGLUtils;
 
@@ -18,6 +21,11 @@ public class GUITest extends BaseGame implements GUIComponentListener {
 	public GUICheckBox checkBox;
 	public GUIDropDownMenu menu;
 	public GUIDropDownList list;
+	public GUIGroup radio;
+	public GUIRadioCheckBox radio1;
+	public GUIRadioCheckBox radio2;
+	public GUIRadioCheckBox radio3;
+	public GUILabel label;
 	
 	public GUITest() {
 		
@@ -45,6 +53,26 @@ public class GUITest extends BaseGame implements GUIComponentListener {
 		this.list.addButton(new GUIButton("1024 x 720", new Colour[] { Colour.LIGHT_BLUE, Colour.BLUE, Colour.RED }, 100, 20));
 		this.list.addButton(new GUIButton("1920 x 1080", new Colour[] { Colour.LIGHT_BLUE, Colour.BLUE, Colour.RED }, 100, 20));
 		this.list.position = new Vector2D(380, 100);
+		
+		this.radio = new GUIGroup("RadioButtons");
+		this.radio.position = new Vector2D(100, 200);
+		
+		this.radio1 = new GUIRadioCheckBox(new Colour[] { Colour.LIGHT_BLUE, Colour.BLUE, Colour.RED }, 20, 20);
+		this.radio1.text = "Option 1";
+		this.radio1.position = new Vector2D(0, 0);
+		this.radio2 = new GUIRadioCheckBox(new Colour[] { Colour.LIGHT_BLUE, Colour.BLUE, Colour.RED }, 20, 20);
+		this.radio2.text = "Option 2";
+		this.radio2.position = new Vector2D(0, 30);
+		this.radio3 = new GUIRadioCheckBox(new Colour[] { Colour.LIGHT_BLUE, Colour.BLUE, Colour.RED }, 20, 20);
+		this.radio3.text = "Option 3";
+		this.radio3.position = new Vector2D(0, 60);
+		
+		this.radio.add(this.radio1);
+		this.radio.add(this.radio2);
+		this.radio.add(this.radio3);
+		
+		this.label = new GUILabel("This is a label");
+		this.label.position = new Vector2D(0, 0);
 	}
 	
 	/* The method called when the game loop is updated */
@@ -53,6 +81,8 @@ public class GUITest extends BaseGame implements GUIComponentListener {
 		this.checkBox.update();
 		this.menu.update();
 		this.list.update();
+		this.radio.update();
+		this.label.update();
 	}
 	
 	/* The method called when the game loop is rendered */
@@ -67,6 +97,8 @@ public class GUITest extends BaseGame implements GUIComponentListener {
 		this.checkBox.render();
 		this.menu.render();
 		this.list.render();
+		this.radio.render();
+		this.label.render();
 	}
 	
 	public static void main(String[] args) {
